--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Source+Sans+Pro&family=Spectral:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
-  <!-- BOOTSTRAP JAVASCRIPT -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </head>
 
@@ -28,11 +24,11 @@
 <body>
   <!-- CONTAINER 1 -->
 
-  <section class="dark" id="cabeza">
+  <section class="dark">
 
     <div class="container-fluid">
 
-      <nav class="navbar navbar-expand-lg navbar-light" style="padding-left:0px;">
+      <nav class="navbar navbar-expand-lg navbar-light">
 
         <a class="navbar-brand" href="">TRES INCENDIOS RECORDS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#releases">Lanzamientos</a>
+              <a class="nav-link" href="releases.html">Lanzamientos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="bands.html">Bandas</a>
@@ -59,7 +55,7 @@
       </nav>
       <!-- TÍTULO -->
 
-      <div class=" container row">
+      <div class=" container row" id="cabeza">
         <div class="description col-lg-6 col-md-12">
           <h1 class="big-heading">Producción y difusión de bandas alternativas emergentes.</h1>
           <button type="button" class=" bandcamp btn-outline-dark btn btn-lg btn-link btn-sm"><a href="https://tres-incendios-temporales.bandcamp.com/" class="INFO"><i class="fab fa-bandcamp"></i> LISTEN AND SUPPORT</a></button>
@@ -78,99 +74,125 @@
   <section class="light" id="releases">
 
 
-      <div id="carousel-release" class="carousel slide" data-ride="carousel" data-interval="3333">
+    <div id="carousel-release" class="carousel slide" data-ride="carousel" data-interval="3333">
 
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">
-              <img class="lanzamientos-carousel img-thumbnail" src="images/TRANSIBERIANO.jpg" alt="TRANS">
-            </a>
-          </div>
-
-          <div class="carousel-item">
-            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
-              <img class="lanzamientos-carousel img-thumbnail" src="images/ESCENCIAL.jpg" alt="scn" />
-            </a>
-          </div>
-          <div class="carousel-item">
-            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
-              <img class="lanzamientos-carousel img-thumbnail" src="images/SOMBRAS.jpg" alt="sxm" />
-            </a>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carousel-release" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#carousel-release" role="button" data-slide="next">
-          <span class="carousel-control-next-icon"></span>
-        </a>
-      </div>
-
-
-      <div class="row">
-
-        <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
-          <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/ausencia">
-            <img class="lanzamientos img-thumbnail" src="images/AUSENCIA.jpg" alt="AU" />
-            <span class="artist-release">SECRETISMO</span>
-            <h4 class="product-name">Ausencia</h4>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">
+            <img class="lanzamientos-carousel img-thumbnail" src="images/TRANSIBERIANO.jpg" alt="TRANS">
           </a>
         </div>
+
+        <div class="carousel-item">
+          <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
+            <img class="lanzamientos-carousel img-thumbnail" src="images/ESCENCIAL.jpg" alt="scn" />
+          </a>
+        </div>
+        <div class="carousel-item">
+          <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
+            <img class="lanzamientos-carousel img-thumbnail" src="images/SOMBRAS.jpg" alt="sxm" />
+          </a>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carousel-release" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#carousel-release" role="button" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
+
+
+    <div class="row">
+
+      <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/ausencia">
+          <img class="lanzamientos img-thumbnail" src="images/AUSENCIA.jpg" alt="AU" />
+
+          <div class="text-no-wrap">
+            <span class="artist-release">SECRETISMO</span>
+            <h4 class="product-name">Ausencia</h4>
+          </div>
+        </a>
+      </div>
 
 
       <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/everything-lost">
           <img class="lanzamientos img-thumbnail" src="images/everything lost.jpg" alt="EL" />
-          <span class="artist-release">THE_CLUSTER</span>
-          <h4 class="product-name">Everything Lost</h4>
+
+          <div class="text-no-wrap">
+            <span class="artist-release">THE_CLUSTER</span>
+            <h4 class="product-name">Everything Lost</h4>
+          </div>
         </a>
       </div>
 
       <div class=" image EP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
           <img class="lanzamientos img-thumbnail" src="images/Singles.jpg" alt="singles" />
-          <span class="artist-release">TRIVMVIRS</span>
-          <h4 class="product-name">Singles Vol. 1</h4>
+
+          <div class="text-no-wrap">
+            <span class="artist-release">TRIVMVIRS</span>
+            <h4 class="product-name">Singles Vol. 1</h4>
+          </div>
         </a>
       </div>
 
       <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">
           <img class="lanzamientos img-thumbnail" src="images/TRANSIBERIANO.jpg" alt="TRANS">
-          <span class="artist-release">SADKÓ</span>
-          <h4 class="product-name">Transiberiano (Транссибирский)</h4>
+
+          <div class="text-no-wrap">
+            <span class="artist-release">SADKÓ</span>
+            <h4 class="product-name">Transiberiano (Транссибирский)</h4>
+          </div>
         </a>
       </div>
 
       <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">
+
           <img class="lanzamientos img-thumbnail" src="images/SIGLO XX.jpg" alt="SXX" />
-          <span class="artist-release">DIMITRI NOVIKOV</span>
-          <h4 class="product-name">Siglo XX-20 век (Lost recordings)</h4>
+          <div class="text-no-wrap">
+
+            <span class="artist-release">DIMITRI NOVIKOV</span>
+            <h4 class="product-name">Siglo XX-20 век (Lost recordings)</h4>
+          </div>
         </a>
       </div>
 
       <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
           <img class="lanzamientos img-thumbnail" src="images/SOMBRAS.jpg" alt="sxm" />
-          <span class="artist-release">SOMBRAS</span>
-          <h4 class="product-name">Sombras S/T</h4>
+
+          <div class="text-no-wrap">
+            <span class="artist-release">SOMBRAS</span>
+            <h4 class="product-name">Sombras S/T</h4>
+          </div>
         </a>
       </div>
 
       <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
           <img class="lanzamientos img-thumbnail" src="images/THALASSIC.jpg" alt="THLSC" />
-          <span class="artist-release">AUDIOCANCER</span>
-          <h4 class="product-name">T H A L A S S I C</h4>
+          <div class="text-no-wrap">
+
+            <span class="artist-release">AUDIOCANCER</span>
+            <h4 class="product-name">T H A L A S S I C</h4>
+          </div>
         </a>
       </div>
 
       <div class="image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/blinded">
           <img class="lanzamientos img-thumbnail" src="images/BLINDED.jpg" alt="bln" />
-          <span class="artist-release">GOLDENROD</span>
-          <h4 class="product-name">Blinded</h4>
+
+          <div class="text-no-wrap">
+            <span class="artist-release">GOLDENROD</span>
+            <h4 class="product-name">Blinded</h4>
+          </div>
+
         </a>
       </div>
 
@@ -217,10 +239,10 @@
 
     <div class="container-fluid">
 
-      <a href="https://tres-incendios-temporales.bandcamp.com/"><i class="fab fa-bandcamp"></i> bandcamp</a>
-      <a href="https://www.youtube.com/user/malezip/videos"><i class="fab fa-youtube"></i> youtube</a>
-      <a href="https://www.facebook.com/tresincendiosmedios/"><i class="fab fa-facebook"></i> facebook</a>
-      <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8"><i class="fab fa-instagram"></i> instagram</a>
+      <a class="social-link" href="https://tres-incendios-temporales.bandcamp.com/"><i class="fab fa-bandcamp"></i> bandcamp</a>
+      <a class="social-link" href="https://www.youtube.com/user/malezip/videos"><i class="fab fa-youtube"></i> youtube</a>
+      <a class="social-link" href="https://www.facebook.com/tresincendiosmedios/"><i class="fab fa-facebook"></i> facebook</a>
+      <a class="social-link" href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8"><i class="fab fa-instagram"></i> instagram</a>
       <p class="copyriht">© 2020 Tres Incendios Records</p>
 
     </div>
@@ -229,9 +251,33 @@
 
 
 
-  <!--HIPSUM HIPSUM-->
 
-  <!--
+
+
+
+
+
+
+
+  <!-- BOOTSTRAP JAVASCRIPT -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
+
+
+
+
+</body>
+
+
+
+</html>
+
+<!--HIPSUM HIPSUM-->
+
+<!--
 
 
   RADIO
@@ -240,9 +286,4 @@
     <li>Promoción de eventos</li>
     <li>Networking</li>
     <li>Film</li>
-
-
-
-
-
 </html>
