--- a/releases.html
+++ b/releases.html
@@ -14,11 +14,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Source+Sans+Pro&family=Spectral:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
-  <!-- BOOTSTRAP JAVASCRIPT -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
@@ -84,93 +79,181 @@
         <span class="carousel-control-next-icon"></span>
       </a>
     </div>
+
+    <h3>LPs</h3>
+
+
     <div class="row">
 
-      <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
-        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/ausencia">
-          <img class="lanzamientos img-thumbnail" src="images/AUSENCIA.jpg" alt="AU" />
-          <span class="artist-release">SECRETISMO</span>
-          <h4 class="product-name">Ausencia</h4>
-        </a>
+      <div class="text-no-wrap">
       </div>
 
-      <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
-        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/everything-lost">
-          <img class="lanzamientos img-thumbnail" src="images/everything lost.jpg" alt="EL" />
-          <span class="artist-release">THE_CLUSTER</span>
-          <h4 class="product-name">Everything Lost</h4>
-        </a>
-      </div>
-
-      <div class=" image EP text-rel col-lg-3 col-md-4 col-sm-6">
-        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
-          <img class="lanzamientos img-thumbnail" src="images/Singles.jpg" alt="singles" />
-          <span class="artist-release">TRIVMVIRS</span>
-          <h4 class="product-name">Singles Vol. 1</h4>
-        </a>
-      </div>
 
       <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">
           <img class="lanzamientos img-thumbnail" src="images/TRANSIBERIANO.jpg" alt="TRANS">
-          <span class="artist-release">SADKÓ</span>
-          <h4 class="product-name">Transiberiano (Транссибирский)</h4>
+
+          <div class="text-no-wrap">
+            <span class="artist-release">SADKÓ</span>
+            <h4 class="product-name">Transiberiano (Транссибирский)</h4>
+          </div>
         </a>
       </div>
-
-      <div class="image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
-        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/again">
-          <img class="lanzamientos img-thumbnail" src="images/AGAIN.jpg" alt="OTRVZ" />
-          <span class="artist-release">THE_CLUSTER</span>
-          <h4 class="product-name">Again</h4>
-        </a>
-      </div>
-
 
       <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
           <img class="lanzamientos img-thumbnail" src="images/ESCENCIAL.jpg" alt="scn" />
-          <span class="artist-release">SECRETISMO</span class="artist-release">
-          <h4 class="product-name">Esencial</h4>
+
+          <div class="text-no-wrap">
+            <span class="artist-release">SECRETISMO</span class="artist-release">
+            <h4 class="product-name">Esencial</h4>
+          </div>
+        </a>
+      </div>
+
+      <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
+
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
+          <img class="lanzamientos img-thumbnail" src="images/SOMBRAS.jpg" alt="sxm" />
+
+          <div class="text-no-wrap">
+            <span class="artist-release">SOMBRAS</span>
+            <h4 class="product-name">Sombras S/T</h4>
+          </div>
+
+        </a>
+
+      </div>
+
+    </div>
+
+
+    <h3>EPs</h3>
+
+    <div class="row">
+
+      <div class=" image EP text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
+          <img class="lanzamientos img-thumbnail" src="images/Singles.jpg" alt="singles" />
+
+          <div class="text-no-wrap">
+            <span class="artist-release">TRIVMVIRS</span>
+            <h4 class="product-name">Singles Vol. 1</h4>
+          </div>
         </a>
       </div>
 
       <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">
           <img class="lanzamientos img-thumbnail" src="images/SIGLO XX.jpg" alt="SXX" />
-          <span class="artist-release">DIMITRI NOVIKOV</span>
-          <h4 class="product-name">Siglo XX-20 век (Lost recordings)</h4>
+
+          <div class="text-no-wrap">
+            <span class="artist-release">DIMITRI NOVIKOV</span>
+            <h4 class="product-name">Siglo XX-20 век (Lost recordings)</h4>
+          </div>
         </a>
       </div>
 
-      <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
-        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
-          <img class="lanzamientos img-thumbnail" src="images/SOMBRAS.jpg" alt="sxm" />
-          <span class="artist-release">SOMBRAS</span>
-          <h4 class="product-name">Sombras S/T</h4>
-        </a>
-      </div>
 
       <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
           <img class="lanzamientos img-thumbnail" src="images/THALASSIC.jpg" alt="THLSC" />
-          <span class="artist-release">AUDIOCANCER</span>
-          <h4 class="product-name">T H A L A S S I C</h4>
+
+          <div class="text-no-wrap">
+            <span class="artist-release">AUDIOCANCER</span>
+            <h4 class="product-name">T H A L A S S I C</h4>
+          </div>
         </a>
       </div>
 
-      <div class="image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
-        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/blinded">
-          <img class="lanzamientos img-thumbnail" src="images/BLINDED.jpg" alt="bln" />
-          <span class="artist-release">GOLDENROD</span>
-          <h4 class="product-name">Blinded</h4>
+
+      <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/celeste-altamar">
+          <img class="lanzamientos img-thumbnail" src="images/CELESTE.jpg" alt="C/A" />
+
+          <div class="text-no-wrap">
+            <span class="artist-release">SADKÓ</span>
+            <h4 class="product-name">Celeste / Altamar</h4>
+          </div>
         </a>
       </div>
 
     </div>
 
+    <h3>Singles</h3>
+
+    <div class="row">
+
+
+      <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/ausencia">
+          <img class="lanzamientos img-thumbnail" src="images/AUSENCIA.jpg" alt="AU" />
+
+          <div class="text-no-wrap">
+            <span class="artist-release">SECRETISMO</span>
+            <h4 class="product-name">Ausencia</h4>
+          </div>
+        </a>
+      </div>
+
+      <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/everything-lost">
+          <img class="lanzamientos img-thumbnail" src="images/everything lost.jpg" alt="EL" />
+
+          <div class="text-no-wrap">
+            <span class="artist-release">THE_CLUSTER</span>
+            <h4 class="product-name">Everything Lost</h4>
+          </div>
+        </a>
+      </div>
+
+
+      <div class="image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/again">
+          <img class="lanzamientos img-thumbnail" src="images/AGAIN.jpg" alt="OTRVZ" />
+
+          <div class="text-no-wrap">
+            <span class="artist-release">THE_CLUSTER</span>
+            <h4 class="product-name">Again</h4>
+          </div>
+        </a>
+      </div>
+
+
+
+      <div class="image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/blinded">
+          <img class="lanzamientos img-thumbnail" src="images/BLINDED.jpg" alt="bln" />
+
+          <div class="text-no-wrap">
+            <span class="artist-release">GOLDENROD</span>
+            <h4 class="product-name">Blinded</h4>
+          </div>
+        </a>
+      </div>
+
+    </div>
+
+
   </section>
 
+
+
+
+
+
+
+
+
+
+
+
+  
+
+  <!-- BOOTSTRAP JAVASCRIPT -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
 </body>
